<resources>
    <string name="app_name">AndroidCountryQuiz</string>
    <string name="question">Question %1 from %2$d</string>
    <string name="image_description">Flag image</string>
    <string name="guess_country">Which country flag?</string>
    <string name="button">button</string>
    <string name="text_view">information_for_user</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Difficulty</string>
    <string name="number_of_choices_description">Number of answer buttons</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions included in quiz</string>
</resources>
